[lib]
name = "libero_validator"
path = "src/lib.rs"

[[bin]]
name = "libero_validator"
path = "src/main.rs"
test = false
doctest = false

[[bin]]
name = "proxy_sidecar"
path = "src/bin/proxy_sidecar.rs"
test = false
doctest = false


[package]
name = "libero_validator"
version = "0.1.1"
edition = "2021"

[features]
# Enable advanced I/O stacks. Build with: `--features io_uring,ebpf,afxdp`
io_uring = ["dep:_tokio-uring"]
ebpf = ["dep:redbpf"]
afxdp = ["dep:afxdp"]
default = []
free = [
    "dashmap",
    "prometheus",
    "tokio-rustls",
    "trust-dns-resolver",
    "tokio-tungstenite",
]
fast-open = []

[dependencies]
# Async runtime & utils
tokio = { version = "1.38", features = ["full"] }
# Low‑level sockets + constant access
socket2 = "0.5"
# Optional io_uring backend
_tokio-uring = { package = "tokio-uring", version = "0.4", optional = true }
# eBPF support (optional)
redbpf = { version = "2", optional = true, default-features = false }
# Jemalloc global allocator
jemallocator = "0.5"
# Optional AF_XDP / DPDK‑style user‑space networking
afxdp = { version = "0.4", optional = true }
# TLS / session resumption
# Socks + TLS wrappers
# CLI
clap = { version = "4", features = ["derive"] }
once_cell = "1"
# Futures utilities
futures = "0.3"
libc = "0.2"
# Perfect‑hash map (already used)
phf = { version = "0.11", features = ["macros"] }
# Random shuffle
rand = "0.9"
# Bloom filter for duplicate detection
bloomfilter = "3"
# Fast CRC32 hashing
crc32fast = "1.4"
# Faster mutexes
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Free mode helpers
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dashmap = { version = "5", optional = true }
prometheus = { version = "0.13", optional = true }
tokio-rustls = { version = "0.24", optional = true }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "dns-over-https-rustls"], optional = true }
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = "1"
# Memory mapped input
memmap2 = "0.5"
proxy_feed = { path = "./proxy_feed" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "test-util"] }

[workspace]
members = [
    ".",
    "proxy_o_matic",
    "proxy_feed",
]

