[lib]
name = "libero_validator"
path = "src/lib.rs"

[[bin]]
name = "libero_validator"
path = "src/main.rs"
test = false
doctest = false


[package]
name = "libero_validator"
version = "0.1.1"
edition = "2021"

[features]
# Enable advanced I/O stacks. Build with: `--features io_uring,ebpf,afxdp`
io_uring = ["dep:_tokio-uring"]
ebpf = ["dep:redbpf"]
afxdp = ["dep:afxdp"]
default = []
fast-open = []

[dependencies]
# Async runtime & utils
tokio = { version = "1.38", features = ["full"] }
# Low‑level sockets + constant access
socket2 = "0.5"
# Optional io_uring backend
_tokio-uring = { package = "tokio-uring", version = "0.4", optional = true }
# eBPF support (optional)
redbpf = { version = "2", optional = true, default-features = false }
# Optional AF_XDP / DPDK‑style user‑space networking
afxdp = { version = "0.4", optional = true }
# TLS / session resumption
# Socks + TLS wrappers
# CLI
clap = { version = "4", features = ["derive"] }
once_cell = "1"
# Futures utilities
futures = "0.3"
libc = "0.2"
# Perfect‑hash map (already used)
phf = { version = "0.11", features = ["macros"] }
# Random shuffle
rand = "0.9"
# Bloom filter for duplicate detection
bloomfilter = "3"
# Fast CRC32 hashing
crc32fast = "1.4"
# Faster mutexes
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
memmap2 = "0.5"
dashmap = "5"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio-socks = "0.5"
url = "2"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "test-util"] }

[workspace]
members = [
    ".",
]

