[package]
name = "proxy_feed"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
csv = "1"
serde_json = "1"
quick-xml = "0.31"
zip = "0.6"
flate2 = "1"
bzip2 = "0.4"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
config = "0.13"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
thiserror = "1"
scraper = "0.18"
regex = "1"
rand = "0.9"
base64 = "0.21"
anyhow = "1"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
