[package]
name = "proxy_o_matic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
socks = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
dashmap = "5"
tokio-rustls = { version = "0.24" }
webpki-roots = "0.25"
rustls = "0.21"
hyper = { version = "0.14", features = ["full"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
ipnet = "2"

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
# placeholder for proxyless features
proxyless = []
